overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
 	padding: 0;
 	background-color: #FFFFFF;
 	color: var(--color-font);
+	overflow: hidden;
 }
 
 /* page margins */
